Mudança botão pagina inicial

--- a/PI - Web/CSS/estilos.css
+++ b/PI - Web/CSS/estilos.css
@@ -102,13 +102,13 @@ body
 }
 .botao-vitrine
 {
-    transition: transform 0.3s ease, opacity 0.3s ease;
+    transition: transform 0.3s ease, filter 0.3s ease;
     display: inline-block;
     transform-origin: center;
 }
 .botao-vitrine:hover
 {
-    opacity: 0.8;
+    filter: brightness(0.85) contrast(1.2);
     transform: scale(1.1);
 }
 .fundo-vitrine
