Coloca os links no footers, os que existem eu coloquei os links mas os que nao existe eu deixei vazio, quando existir adicione

--- a/PI - Web/CSS/estilos.css
+++ b/PI - Web/CSS/estilos.css
@@ -144,6 +144,18 @@ footer
     line-height: 1.75;
     color:#07484A;
 }
+.foot-menu a
+{
+    text-decoration: none;
+    color:#07484A;
+    cursor: pointer;
+    transition: color 0.3s ease, text-decoration 0.3s ease;
+}
+.foot-menu a:hover
+{
+    color: #0a6a6d;
+    text-decoration: underline;
+}
 /*FOOTER*/
 
 /*CORPO*/
