Faz o esqueleto do carrinho e outras mudanças de comentarios e remoção de alguns codigos inuteis, e css para o carrimho

--- a/PI - Web/CSS/estilos.css
+++ b/PI - Web/CSS/estilos.css
@@ -1,7 +1,7 @@
 :root {
+    /* Paleta base do tema */
     --verde-primario: #07484A;
     --fundo-footer: #F3F6F5;
-
 }
 
 /* Animação de slide para transição de páginas */
